--- a/IdleCollector/IdleCollector.csproj
+++ b/IdleCollector/IdleCollector.csproj
@@ -28,6 +28,11 @@
     <Folder Include="Content\SoundEffects\" />
     <Folder Include="Content\Textures\" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="IdleEngine">
+      <HintPath>..\IdleEngine\obj\Debug\net6.0\IdleEngine.dll</HintPath>
+    </Reference>
+  </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
