--- a/IdleEngine/IdleEngine.csproj
+++ b/IdleEngine/IdleEngine.csproj
@@ -15,5 +15,6 @@
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
   </ItemGroup>
 </Project>
