49. Sound/Audio related todo list started, added volume control, updated ResourceAtlas with new gets, and added MusicController.cs

--- a/IdleCollector/IdleCollector.csproj
+++ b/IdleCollector/IdleCollector.csproj
@@ -19,6 +19,17 @@
     <None Remove="Icon.bmp" />
   </ItemGroup>
   <ItemGroup>
+    <COMReference Include="Microsoft.Vbe.Interop.Forms">
+      <WrapperTool>tlbimp</WrapperTool>
+      <VersionMinor>0</VersionMinor>
+      <VersionMajor>2</VersionMajor>
+      <Guid>0d452ee1-e08f-101a-852e-02608c4d0bb4</Guid>
+      <Lcid>0</Lcid>
+      <Isolated>false</Isolated>
+      <EmbedInteropTypes>true</EmbedInteropTypes>
+    </COMReference>
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="Content\Fonts\DePixelKlein.spritefont">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -54,6 +65,20 @@
     <Reference Include="IdleEngine">
       <HintPath>..\IdleEngine\obj\Release\net6.0\IdleEngine.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Content\Audio\imagefilm-043-by-sascha-ende-from-filmmusic-io.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Content\Audio\story-of-a-fairy-by-sascha-ende-from-filmmusic-io.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Content\Audio\story-of-a-sunflower-by-sascha-ende-from-filmmusic-io.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Content\Audio\stranded-by-sascha-ende-from-filmmusic-io.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
